--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <link rel = "stylesheet" type = "text/css" href = "assets/css/bootstrap.css">
+  <link rel = "stylesheet" type = "text/css" href = "assets/css/animate.css">
+  <link rel = "stylesheet" type = "text/css" href = "assets/css/myStyle.css">
+  <link rel = "stylesheet" type = "text/css" href = "assets/js/bootstrap.js">
+  <link rel = "stylesheet" type = "text/css" href = "assets/js/jquery.min.js">
+  <link rel = "stylesheet" type = "text/css" href = "assets/js/carousel.js">
   <title>EventIt</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name = "viewport" content = "width=device-width, initial-scale=1">
+  <link rel = "icon" type = "image/x-icon" href = "favicon.ico">
 </head>
 <body>
   <app-root></app-root>
